# ai-helpers

./: .gitignore  CHANGELOG.md  EXAMPLES.md  LISEZMOI.md  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
scripts/: build_all_docs.py  build_anim.py  build_sitemap.py  gen_landscape.py  sync_suite.py
tests/: test_examples.py
