[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-helpers"
version = "0.3.0"
description = "AI Helpers — meta-package that installs the full suite of Python helpers for AI/media work: os-helper, audio-helper, video-helper, sftp-helper, youtube-helper, bucket-helper, podcast-helper, capture-helper, vocal-helper, speaker-helper, md2star."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Warith HARCHAOUI", email = "warithmetics@deraison.ai"},
]
keywords = ["ai", "machine-learning", "audio", "video", "podcast", "ffmpeg", "yt-dlp", "s3", "sftp", "meta-package"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]
# Base install is intentionally light — just the shared foundation every
# helper builds on. Everything else lives behind group extras below, so you
# install only the corner of the suite you actually need.
dependencies = [
    "os-helper>=1.5.0",
]

[project.optional-dependencies]
# 🔊 Audio & voice — load / convert / separate audio, live speech-to-text
# with diarization (vocal-helper), and text-to-speech (speaker-helper).
audio = [
    "audio-helper>=1.5.6",
    "vocal-helper>=0.4.1",
    "speaker-helper>=0.7.2",
]
# 🎬 Video & capture — frame extraction / conversion + live camera/mic capture.
video = [
    "video-helper>=1.6.3",
    "capture-helper>=0.2.3",
]
# 🌐 Media acquisition — pull audio / video from the internet.
acquire = [
    "youtube-helper>=1.3.4",
    "podcast-helper>=0.3.4",
]
# 🗄️ Storage & transfer — S3-compatible object storage + SFTP.
storage = [
    "bucket-helper>=0.2.3",
    "sftp-helper>=2.2.3",
]
# 📄 Documents — Markdown → DOCX/PPTX/PDF bridge on Pandoc.
documents = [
    "md2star>=2.4.1",
]
# 🧰 Everything — the kitchen sink. Deliberately heavy: only reach for this
# if you really want the whole suite in one environment.
all = [
    "audio-helper>=1.5.6",
    "vocal-helper>=0.4.1",
    "speaker-helper>=0.7.2",
    "video-helper>=1.6.3",
    "capture-helper>=0.2.3",
    "youtube-helper>=1.3.4",
    "podcast-helper>=0.3.4",
    "bucket-helper>=0.2.3",
    "sftp-helper>=2.2.3",
    "md2star>=2.4.1",
]
# 🧪 Test — runs the end-to-end example tests (tests/test_examples.py) that prove
# the README/site snippets actually execute. Install alongside `[all]` (the suite
# the examples import); wired into the CI `examples` job.
test = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: end-to-end example test that hits the network (YouTube) or is otherwise heavy; skips cleanly when the external service is unreachable",
]

[project.urls]
Homepage = "https://harchaoui.org/warith/ai-helpers"
Repository = "https://github.com/warith-harchaoui/ai-helpers"
Issues = "https://github.com/warith-harchaoui/ai-helpers/issues"
